# fullstack-rust-axum-dioxus-rwa-example

frontend/: Cargo.toml
