[package]
name = "frontend"
version = "0.2.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

[dependencies]

common_model = { path = "../common_model" }

dioxus = "0.5.6"
dioxus-web = { version = "0.5.6" }
dioxus-router = { version = "0.5.6", features = ["web"] }
dioxus-use-storage = "0.3.1"

log = "0.4.17"
sir = { version = "0.5.0", features = ["dioxus"] }

wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

reqwest = { version = "0.12.5", features = ["blocking", "json"] }
